--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Akhil Portfolio</title>
+    
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="mediaqueries.css"/>
 </head>
@@ -219,7 +220,7 @@
                     <div class="article-container">
                         <img src="./assets/project 1.png" alt="Project 1" class="project-img"/>
                     </div>
-                    <h2 class="Experience-sub-title project-title">Project One</h2>
+                    <h2 class="Experience-sub-title project-title">Mass Mail Dispatcher website with React</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/akhilrathod09/Mass-Mail-Dispatcher/tree/master'">
                             Github
@@ -230,7 +231,7 @@
                     <div class="article-container">
                         <img src="./assets/project2.png" alt="Project 2" class="project-img"/>
                     </div>
-                    <h2 class="Experience-sub-title project-title">Project Two</h2>
+                    <h2 class="Experience-sub-title project-title">Chat App using MERN Stack</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/akhilrathod09/Chat-App'">
                             Github
@@ -241,7 +242,7 @@
                     <div class="article-container">
                         <img src="./assets/project33.png" alt="Project 2" class="project-img"/>
                     </div>
-                    <h2 class="Experience-sub-title project-title">Project Three</h2>
+                    <h2 class="Experience-sub-title project-title">Smart Solar Tracker</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/akhilrathod09/SOLAR-TRACKER-group-project-'">
                             Github
