--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 </div>
                 <div class="contact-info-container">
                     <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon"/>
-                    <p><a href="www.linkedin.com/in/akhil-rathod-395a96252">LinkedIN</a></p>
+                    <p><a href="https://www.linkedin.com/in/akhilrathod">LinkedIN</a></p>
                 </div>
                 <div class="contact-info-container">
                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
