--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 <img src="./assets/checkmark.png" alt="Experience icon"
                                 class="icon"/>
                                 <div>
-                                    <h3>SASS</h3>
+                                    <h3>Jquery</h3>
                                     <p>Intermediate</p>
                                 </div>
                             </article>
@@ -147,7 +147,7 @@
                                 <img src="./assets/checkmark.png" alt="Experience icon"
                                 class="icon"/>
                                 <div>
-                                    <h3>React.js</h3>
+                                    <h3>Reactjs</h3>
                                     <p>Basic</p>
                                 </div>
                             </article>
@@ -223,7 +223,10 @@
                     </div>
                     <h2 class="Experience-sub-title project-title">Mass Mail Dispatcher website with React</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/akhilrathod09/Mass-Mail-Dispatcher/tree/master'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://mass-mail-dispatcher-lac.vercel.app/'">
+                            Link
+                        </button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/akhilrathod09/Mass-Mail-Dispatcher'">
                             Github
                         </button>
                     </div>
@@ -250,6 +253,19 @@
                         </button>
                     </div>
                 </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/Project-4.png" alt="Project 4" class="project-img"/>
+                    </div>
+                    <h2 class="Experience-sub-title project-title">Resposive website Landing Page(Frontend)</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://responsive-landing-page-fawn.vercel.app/'">
+                            Link
+                        </button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/akhilrathod09/Responsive-Landing-page'">
+                            Github
+                        </button>
+                    </div>
             </div>
             </div>
             <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow"
