--- a/index.html
+++ b/index.html
@@ -267,6 +267,20 @@
                         </button>
                     </div>
             </div>
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img src="./assets/Project 5.png" alt="Project 5" class="project-img"/>
+                </div>
+                <h2 class="Experience-sub-title project-title">3D Map Layout website</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://mall-map.netlify.app/'">
+                        Link
+                    </button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/akhilrathod09/Mall-map'">
+                        Github
+                    </button>
+                </div>
+        </div>
             </div>
             <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow"
             onclick="location.href='./#experience'"
